--- a/リバースプラン/index.html
+++ b/リバースプラン/index.html
@@ -117,9 +117,9 @@
             </tr>
             <tr>
                 <td>■ 個別指導塾キャリア</td>
-                <td>うんちみたいな高額教材を買わす宗教紛いな塾</td>
+                <td><a href="javascript:void(0);" onclick="showEmbeddedPage()">個別指導塾キャリアの詳細を見る</a></td>
                 <td>廃止</td>
-            </tr>
+　　　　　　　　</tr>
             <tr>
                 <td>■ 神戸市青少年会館</td>
                 <td>自習室として活用でき、個室を借りることも可能</td>
