--- a/リバースプラン/個別指導塾キャリア/index.html
+++ b/リバースプラン/個別指導塾キャリア/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>個別指導塾キャリア - 施設紹介</title>
+  <title>個別指導塾キャリア</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -85,11 +85,12 @@
   <div class="container">
     <div class="content">
       <div class="details">
-        <h2>施設詳細</h2>
+        <h2>詳細</h2>
         <p>
-          個別指導塾キャリアは、生徒一人ひとりに合わせた教育を提供する学習塾です。
-          経験豊富な講師陣が、生徒の目標達成を全力でサポートします。
-          静かで快適な学習環境を整えています。
+          うんちみたいな高額教材を買わす宗教紛いな塾。講師は三輪と数名の大学生のみ。
+          アルバイト学生以外の従業員はおらず、自称代表取締役社長の三輪１人だけが正社員。
+          機嫌が悪ければ生徒に八つ当たりするのは当たり前。
+          成績を必ず上げると誓うも、上がるどころか、むしろ成績を下げられた。
         </p>
         <div class="photos">
           <img src="https://hontani-hajime.github.io/server/%E3%83%AA%E3%83%90%E3%83%BC%E3%82%B9%E3%83%97%E3%83%A9%E3%83%B3/%E5%80%8B%E5%88%A5%E6%8C%87%E5%B0%8E%E5%A1%BE%E3%82%AD%E3%83%A3%E3%83%AA%E3%82%A2/IMG_1942.jpeg" alt="施設写真1">
