--- a/リバースプラン/index.html
+++ b/リバースプラン/index.html
@@ -49,6 +49,47 @@
             text-align: center;
             width: 10%;
         }
+        /* モーダルスタイル */
+        .modal {
+            display: none;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.5);
+            justify-content: center;
+            align-items: center;
+            z-index: 1000;
+        }
+        .modal-content {
+            background-color: white;
+            width: 80%;
+            height: 80%;
+            position: relative;
+            border-radius: 8px;
+            overflow: hidden;
+        }
+        .modal iframe {
+            width: 100%;
+            height: 100%;
+            border: none;
+        }
+        .close-button {
+            position: absolute;
+            top: 10px;
+            right: 10px;
+            background-color: #483d8b;
+            color: white;
+            border: none;
+            border-radius: 50%;
+            width: 30px;
+            height: 30px;
+            font-size: 16px;
+            cursor: pointer;
+            text-align: center;
+            line-height: 30px;
+        }
     </style>
 </head>
 <body>
@@ -116,7 +157,7 @@
                 <td>拡大</td>
             </tr>
             <tr>
-                <td>■ 個別指導塾キャリア</td>
+                <td><span id="career">■ 個別指導塾キャリア</span></td>
                 <td>うんちみたいな高額教材を買わす宗教紛いな塾</td>
                 <td>廃止</td>
             </tr>
@@ -127,5 +168,31 @@
             </tr>
         </table>
     </div>
+    <!-- モーダルウィンドウ -->
+    <div class="modal" id="modal">
+        <div class="modal-content">
+            <button class="close-button" id="close-button">&times;</button>
+            <iframe src="https://hontani-hajime.github.io/server/%E3%83%AA%E3%83%90%E3%83%BC%E3%82%B9%E3%83%97%E3%83%A9%E3%83%B3/%E5%80%8B%E5%88%A5%E6%8C%87%E5%B0%8E%E5%A1%BE%E3%82%AD%E3%83%A3%E3%83%AA%E3%82%A2/index.html"></iframe>
+        </div>
+    </div>
+    <script>
+        const careerLink = document.getElementById('career');
+        const modal = document.getElementById('modal');
+        const closeButton = document.getElementById('close-button');
+
+        careerLink.addEventListener('click', () => {
+            modal.style.display = 'flex';
+        });
+
+        closeButton.addEventListener('click', () => {
+            modal.style.display = 'none';
+        });
+
+        window.addEventListener('click', (event) => {
+            if (event.target === modal) {
+                modal.style.display = 'none';
+            }
+        });
+    </script>
 </body>
 </html>
