--- a/index.html
+++ b/index.html
@@ -104,6 +104,11 @@
         document.getElementById('reverseBtn').addEventListener('click', function() {
             document.getElementById('contentFrame').src = "https://hontani-hajime.github.io/server/%E3%83%AA%E3%83%90%E3%83%BC%E3%82%B9%E3%83%97%E3%83%A9%E3%83%B3/";
         });
+
+        // カレンダーのボタンをクリックした時に表示するURL
+        document.getElementById('calendarBtn').addEventListener('click', function() {
+            document.getElementById('contentFrame').src = "https://hontani-hajime.github.io/server/%E3%82%B0%E3%83%AC%E3%83%BC%E3%83%89%E3%82%A2%E3%83%83%E3%83%97";
+        });
     </script>
 </body>
 </html>
