--- a/テスト/index.html
+++ b/テスト/index.html
@@ -9,30 +9,19 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f4f4f9;
             display: flex;
             justify-content: center;
             align-items: center;
             height: 100vh;
+            background-color: #f4f4f9;
         }
         .login-container {
             background: #fff;
             padding: 20px;
             border-radius: 8px;
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-            width: 300px;
-        }
-        .login-container h1 {
-            margin: 0 0 20px;
             text-align: center;
-            font-size: 24px;
-            color: #333;
-        }
-        .login-container label {
-            display: block;
-            margin-bottom: 8px;
-            font-weight: bold;
-            color: #555;
+            width: 300px;
         }
         .login-container input {
             width: calc(100% - 20px);
@@ -56,38 +45,17 @@
         .error {
             color: red;
             font-size: 14px;
-            text-align: center;
-            margin-bottom: 15px;
         }
     </style>
-    <script>
-        function validateLogin(event) {
-            event.preventDefault(); // ページの再読み込みを防ぐ
-            const username = document.getElementById('username').value;
-            const password = document.getElementById('password').value;
-
-            // シンプルな認証チェック（例: "admin" / "password123" が正しいログイン情報）
-            if (username === "admin" && password === "password123") {
-                // 正しい場合、次のページに移動
-                window.location.href = "content.html";
-            } else {
-                // 誤った場合、エラーメッセージを表示
-                document.getElementById('error-message').innerText = "ユーザー名またはパスワードが間違っています。";
-            }
-        }
-    </script>
 </head>
 <body>
     <div class="login-container">
         <h1>ログイン</h1>
-        <form onsubmit="validateLogin(event)">
-            <label for="username">ユーザー名</label>
-            <input type="text" id="username" required>
-            <label for="password">パスワード</label>
-            <input type="password" id="password" required>
-            <div id="error-message" class="error"></div>
-            <button type="submit">ログイン</button>
-        </form>
+        <input type="text" id="username" placeholder="ユーザー名" required>
+        <input type="password" id="password" placeholder="パスワード" required>
+        <div id="error" class="error"></div>
+        <button onclick="login()">ログイン</button>
     </div>
+    <script src="script.js"></script>
 </body>
 </html>
