--- a/22209D/index.html
+++ b/22209D/index.html
@@ -15,7 +15,7 @@
         <main>
             <div class="left">
                 <div class="portrait">
-                    <img src="/22209D/22209D.jpg" alt="福田優花子の肖像">
+                    <img src="server/22209D/22209D.jpg" alt="福田優花子の肖像">
                 </div>
                 <h2>福田優花子</h2>
                 <p class="id-number">個体認識番号　22209D</p>
