--- a/database/22209/index.html
+++ b/database/22209/index.html
@@ -1,1 +1,42 @@
-
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>福田優花子</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <div class="container">
+        <header>
+            <h1>福田優花子</h1>
+            <hr>
+        </header>
+        <main>
+            <div class="left">
+                <div class="portrait">
+                    <img src="/database/22209/22209D.jpg" alt="福田優花子の肖像">
+                </div>
+                <h2>福田優花子</h2>
+                <p class="subname">フクダユカコ</p>
+                <p class="id-number">個体認識番号　22209D</p>
+                <p class="info">初対面　2022年（中１）</p>
+                <p class="info">性別　メス</p>
+            </div>
+            <div class="divider"></div>
+            <div class="right">
+                <section>
+                    <h2>概要</h2>
+                    <hr>
+                    <p class="content">本文を入力</p>
+                </section>
+                <section>
+                    <h2>中学校入学前</h2>
+                    <hr>
+                    <p class="content">本文を入力</p>
+                </section>
+            </div>
+        </main>
+    </div>
+</body>
+</html>
