--- a/database/22209/index.html
+++ b/database/22209/index.html
@@ -15,7 +15,7 @@
         <main>
             <div class="left">
                 <div class="portrait">
-                    <img src="/database/22209/22209.jpg" alt="福田優花子の肖像">
+                    <img src="/database/22209/22209.jpeg" alt="福田優花子の肖像">
                 </div>
                 <h2>福田優花子</h2>
                 <p class="subname">フクダユカコ</p>
