--- a/database/22209/index.html
+++ b/database/22209/index.html
@@ -17,8 +17,8 @@
                 <div class="portrait">
                     <img src="/database/22209/22209.jpg" alt="福田優花子の肖像">
                 </div>
-                <h2>福田優花子</h2>
-                <p class="subname">フクダユカコ</p>
+                <p class="small-space"></p>
+                <p class="subname">2023年 上高地研修</p>
                 <p class="id-number">個体認識番号　22209D</p>
                 <p class="info">初対面　2022年（中１）</p>
                 <p class="info">性別　メス</p>
