--- a/database/22209/index.html
+++ b/database/22209/index.html
@@ -17,11 +17,19 @@
                 <div class="portrait">
                     <img src="/database/22209/22209.jpg" alt="福田優花子の肖像">
                 </div>
-                <p class="研修">2023年 上高地研修</p>
+                <p class="photo-year">2023年撮影</p>
                 <p class="spacer"></p>
                 <p class="id-number">個体認識番号　22209D</p>
                 <p class="info">初対面　2022年（中１）</p>
                 <p class="info">性別　メス</p>
+                <p class="info">生年月日　2009年12月12日</p>
+                <p class="info">血液型　不明</p>
+                <p class="info">幼稚園　不明</p>
+                <p class="info">小学校　不明</p>
+                <p class="info">中学校　神戸龍谷</p>
+                <p class="info">高等学校　不明</p>
+                <p class="info">大学　不明</p>
+                <p class="info">大学院　不明</p>
             </div>
             <div class="divider"></div>
             <div class="right">
