--- a/database/22209/index.html
+++ b/database/22209/index.html
@@ -36,7 +36,7 @@
                 <section>
                     <h2>概要</h2>
                     <hr>
-                    <p class="content">本文を入力</p>
+                    <p class="content">福田優花子（フクダユカコ）は、神戸龍谷中学校時代のクラスメート。当時、特に関わりはなかった。彼女と反りが合わない級友も多かった。ぶりっ子。一人称は「わたし」又は「ゆかこ」。主に標準語を話す。</p>
                 </section>
                 <section>
                     <h2>中学校入学前</h2>
