--- a/database/22209/index.html
+++ b/database/22209/index.html
@@ -41,7 +41,11 @@
                 <section>
                     <h2>中学校入学前</h2>
                     <hr>
-                    <p class="content">本文を入力</p>
+                    <p class="content">詳しいことはわからないが、中学入学前に、山口惺（22111）と関わりがあったらしい。過去に母親と共に、海外旅行に行ったことがある。</p>
+                <section>
+                    <h2>中学校時代（１年上半期）</h2>
+                    <hr>
+                    <p class="content">最初のころ（少なくとも神龍祭まで）は、前髪をつくっていたが、途中から前髪をつくっていなかった。中村玲亜（22208）とつるんでいたが、後に（少なくともピッコロ鑑賞以降）、片岡利御奈（22203）が加わり、２組女子１群となった。おそらく、昼休みに「ゆかこの今日の髪型どう思いますか？」とアンケートをとっていたため、当時は１群のなかでも、自分がリーダー格であると思っていた可能性がある。実際、クラス内カースト上では、かなりの上位層にいた。片岡利御奈（22203）のことはあまり良くは思っておらず「最初、レアと２人だけだったのに、途中からリオナが入って来たんだよ」と言っていたこともあった。本谷元が森悠成（22109）と一緒に美術の授業中に「ブス子」と冗談半分でからかうと、当時の担任である森田隆子（22401）にチクられ、怒られかけたが、森悠成（22109）が「だって本当にブスじゃないですか」と冗談を言ったので、場の雰囲気が笑いに代わり、注意で済んだ。山口グループラインいじめ案件（22501）発生時に、翌日、当時の担任である森田隆子（22401）に詳細をチクっていた。</p>
                 </section>
             </div>
         </main>
