--- a/database/22209/index.html
+++ b/database/22209/index.html
@@ -19,33 +19,31 @@
                 </div>
                 <p class="photo-year">2023年撮影</p>
                 <p class="spacer"></p>
-                <p class="id-number">個体認識番号　22209D</p>
-                <p class="info">初対面　2022年（中１）</p>
-                <p class="info">性別　メス</p>
-                <p class="info">生年月日　2009年12月12日</p>
-                <p class="info">血液型　不明</p>
-                <p class="info">幼稚園　不明</p>
-                <p class="info">小学校　不明</p>
-                <p class="info">中学校　神戸龍谷</p>
-                <p class="info">高等学校　不明</p>
-                <p class="info">大学　不明</p>
-                <p class="info">大学院　不明</p>
+                <div class="info-container">
+                    <div class="info-item"><strong>認識番号</strong> <span>22209</span></div>
+                    <div class="info-item"><strong>初対面</strong> <span>2022年（中１）</span></div>
+                    <div class="info-item"><strong>性別</strong> <span>メス</span></div>
+                    <div class="info-item"><strong>生年月日</strong> <span>2009年12月12日</span></div>
+                    <div class="info-item"><strong>血液型</strong> <span>不明</span></div>
+                    <div class="info-item"><strong>幼稚園</strong> <span>不明</span></div>
+                    <div class="info-item"><strong>小学校</strong> <span>不明</span></div>
+                    <div class="info-item"><strong>中学校</strong> <span>神戸龍谷</span></div>
+                    <div class="info-item"><strong>高等学校</strong> <span>不明</span></div>
+                    <div class="info-item"><strong>大学</strong> <span>不明</span></div>
+                    <div class="info-item"><strong>大学院</strong> <span>不明</span></div>
+                </div>
             </div>
             <div class="divider"></div>
             <div class="right">
                 <section>
                     <h2>概要</h2>
                     <hr>
-                    <p class="content">福田優花子（フクダユカコ）は、神戸龍谷中学校時代のクラスメート。当時、特に関わりはなかった。彼女と反りが合わない級友も多かった。ぶりっ子。一人称は「わたし」又は「ゆかこ」。主に標準語を話す。</p>
+                    <p class="content">本文を入力</p>
                 </section>
                 <section>
                     <h2>中学校入学前</h2>
                     <hr>
-                    <p class="content">詳しいことはわからないが、中学入学前に、山口惺（22111）と関わりがあったらしい。過去に母親と共に、海外旅行に行ったことがある。</p>
-                <section>
-                    <h2>中学校時代（１年上半期）</h2>
-                    <hr>
-                    <p class="content">最初のころ（少なくとも神龍祭まで）は、前髪をつくっていたが、途中から前髪をつくっていなかった。中村玲亜（22208）とつるんでいたが、後に（少なくともピッコロ鑑賞以降）、片岡利御奈（22203）が加わり、２組女子１群となった。おそらく、昼休みに「ゆかこの今日の髪型どう思いますか？」とアンケートをとっていたため、当時は１群のなかでも、自分がリーダー格であると思っていた可能性がある。実際、クラス内カースト上では、かなりの上位層にいた。片岡利御奈（22203）のことはあまり良くは思っておらず「最初、レアと２人だけだったのに、途中からリオナが入って来たんだよ」と言っていたこともあった。本谷元が森悠成（22109）と一緒に美術の授業中に「ブス子」と冗談半分でからかうと、当時の担任である森田隆子（22401）にチクられ、怒られかけたが、森悠成（22109）が「だって本当にブスじゃないですか」と冗談を言ったので、場の雰囲気が笑いに代わり、注意で済んだ。山口グループラインいじめ案件（22501）発生時に、翌日、当時の担任である森田隆子（22401）に詳細をチクっていた。</p>
+                    <p class="content">本文を入力</p>
                 </section>
             </div>
         </main>
