--- a/database/22209/index.html
+++ b/database/22209/index.html
@@ -21,9 +21,9 @@
                 <p class="spacer"></p>
                 <div class="info-container">
                     <div class="info-item"><strong>認識番号</strong> <span>22209</span></div>
-                    <div class="info-item"><strong>初対面</strong> <span>2022年（中１）</span></div>
+                    <div class="info-item"><strong>初対面</strong> <span>2022年(中１)</span></div>
                     <div class="info-item"><strong>性別</strong> <span>メス</span></div>
-                    <div class="info-item"><strong>生年月日</strong> <span>2009年12月12日</span></div>
+                    <div class="info-item"><strong>生年月日</strong> <span>2009/12/12</span></div>
                     <div class="info-item"><strong>血液型</strong> <span>不明</span></div>
                     <div class="info-item"><strong>幼稚園</strong> <span>不明</span></div>
                     <div class="info-item"><strong>小学校</strong> <span>不明</span></div>
