--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="default">
     <meta name="apple-mobile-web-app-title" content="共通サーバー">
-    <link rel="apple-touch-icon" href="https://hontani-hajime.github.io/server/logo.JPG">
-    <link rel="icon" type="image/jpeg" href="https://hontani-hajime.github.io/server/logo.JPG">
+    <link rel="apple-touch-icon" href="https://hontani-hajime.github.io/logo.JPG">
+    <link rel="icon" type="image/jpeg" href="https://hontani-hajime.github.io/logo.JPG">
     <style>
         body {
             margin: 0;
@@ -71,22 +71,22 @@
 </head>
 <body>
     <header>
-        <img src="https://hontani-hajime.github.io/server/%E6%AC%A1%E4%B8%96%E4%BB%A3%E3%82%A4%E3%83%B3%E3%83%86%E3%83%AA%E3%82%B7%E3%82%99%E3%82%A7%E3%83%B3%E3%82%B9.JPG" alt="ロゴ">
+        <img src="https://hontani-hajime.github.io/%E6%AC%A1%E4%B8%96%E4%BB%A3%E3%82%A4%E3%83%B3%E3%83%86%E3%83%AA%E3%82%B7%E3%82%99%E3%82%A7%E3%83%B3%E3%82%B9.JPG" alt="ロゴ">
     </header>
     <main>
         <aside>
             <!-- 左側の画像（クリック可能） -->
-            <img src="https://hontani-hajime.github.io/server/%E3%83%88%E3%83%83%E3%83%97/%E3%83%88%E3%83%83%E3%83%95%E3%82%9A.jpg" alt="トップ">
-            <img src="https://hontani-hajime.github.io/server/%E3%82%A2%E3%83%97%E3%83%AA/%E3%82%A2%E3%83%95%E3%82%9A%E3%83%AA.jpg" alt="アプリ">
-            <img src="https://hontani-hajime.github.io/server/%E3%82%AB%E3%83%AC%E3%83%B3%E3%83%80%E3%83%BC/%E3%82%AB%E3%83%AC%E3%83%B3%E3%82%BF%E3%82%99%E3%83%BC.jpg" alt="カレンダー" id="calendarBtn">
-            <img src="https://hontani-hajime.github.io/server/%E3%83%87%E3%83%BC%E3%82%BF%E3%83%99%E3%83%BC%E3%82%B9/%E3%83%86%E3%82%99%E3%83%BC%E3%82%BF%E3%83%98%E3%82%99%E3%83%BC%E3%82%B9.jpg" alt="データベース">
-            <img src="https://hontani-hajime.github.io/server/%E8%87%AA%E5%88%86%E8%BF%BD%E8%B7%A1/%E8%87%AA%E5%88%86%E8%BF%BD%E8%B7%A1.jpg" alt="自分追跡">
-            <img src="https://hontani-hajime.github.io/server/%E3%83%91%E3%82%B9%E3%83%AF%E3%83%BC%E3%83%89/%E3%83%8F%E3%82%9A%E3%82%B9%E3%83%AF%E3%83%BC%E3%83%88%E3%82%99.jpg" alt="パスワード">
-            <img src="https://hontani-hajime.github.io/server/%E8%AA%AD%E6%9B%B8%E9%80%9A%E5%B8%B3/%E8%AA%AD%E6%9B%B8%E9%80%9A%E5%B8%B3.jpg" alt="読書通帳">
-            <img src="https://hontani-hajime.github.io/server/%E4%BA%88%E7%AE%97%E7%AE%A1%E7%90%86/%E4%BA%88%E7%AE%97%E7%AE%A1%E7%90%86.jpg" alt="予算管理">
-            <img src="https://hontani-hajime.github.io/server/%E3%82%B0%E3%83%AC%E3%83%BC%E3%83%89%E3%82%A2%E3%83%83%E3%83%97/%E3%82%AF%E3%82%99%E3%83%AC%E3%83%BC%E3%83%88%E3%82%99%E3%82%A2%E3%83%83%E3%83%95%E3%82%9A.jpg" alt="グレードアップ" id="gradeBtn">
-            <img src="https://hontani-hajime.github.io/server/%E3%83%AA%E3%83%90%E3%83%BC%E3%82%B9%E3%83%97%E3%83%A9%E3%83%B3/%E3%83%AA%E3%83%8F%E3%82%99%E3%83%BC%E3%82%B9%E3%83%95%E3%82%9A%E3%83%A9%E3%83%B3.jpg" alt="リバースプラン" id="reverseBtn">
-            <img src="https://hontani-hajime.github.io/server/logo.JPG" alt="ロゴ" id="logo">
+            <img src="https://hontani-hajime.github.io/%E3%83%88%E3%83%83%E3%83%97/%E3%83%88%E3%83%83%E3%83%95%E3%82%9A.jpg" alt="トップ">
+            <img src="https://hontani-hajime.github.io/%E3%82%A2%E3%83%97%E3%83%AA/%E3%82%A2%E3%83%95%E3%82%9A%E3%83%AA.jpg" alt="アプリ">
+            <img src="https://hontani-hajime.github.io/%E3%82%AB%E3%83%AC%E3%83%B3%E3%83%80%E3%83%BC/%E3%82%AB%E3%83%AC%E3%83%B3%E3%82%BF%E3%82%99%E3%83%BC.jpg" alt="カレンダー" id="calendarBtn">
+            <img src="https://hontani-hajime.github.io/%E3%83%87%E3%83%BC%E3%82%BF%E3%83%99%E3%83%BC%E3%82%B9/%E3%83%86%E3%82%99%E3%83%BC%E3%82%BF%E3%83%98%E3%82%99%E3%83%BC%E3%82%B9.jpg" alt="データベース">
+            <img src="https://hontani-hajime.github.io/%E8%87%AA%E5%88%86%E8%BF%BD%E8%B7%A1/%E8%87%AA%E5%88%86%E8%BF%BD%E8%B7%A1.jpg" alt="自分追跡">
+            <img src="https://hontani-hajime.github.io/%E3%83%91%E3%82%B9%E3%83%AF%E3%83%BC%E3%83%89/%E3%83%8F%E3%82%9A%E3%82%B9%E3%83%AF%E3%83%BC%E3%83%88%E3%82%99.jpg" alt="パスワード">
+            <img src="https://hontani-hajime.github.io/%E8%AA%AD%E6%9B%B8%E9%80%9A%E5%B8%B3/%E8%AA%AD%E6%9B%B8%E9%80%9A%E5%B8%B3.jpg" alt="読書通帳">
+            <img src="https://hontani-hajime.github.io/%E4%BA%88%E7%AE%97%E7%AE%A1%E7%90%86/%E4%BA%88%E7%AE%97%E7%AE%A1%E7%90%86.jpg" alt="予算管理">
+            <img src="https://hontani-hajime.github.io/%E3%82%B0%E3%83%AC%E3%83%BC%E3%83%89%E3%82%A2%E3%83%83%E3%83%97/%E3%82%AF%E3%82%99%E3%83%AC%E3%83%BC%E3%83%88%E3%82%99%E3%82%A2%E3%83%83%E3%83%95%E3%82%9A.jpg" alt="グレードアップ" id="gradeBtn">
+            <img src="https://hontani-hajime.github.io/%E3%83%AA%E3%83%90%E3%83%BC%E3%82%B9%E3%83%97%E3%83%A9%E3%83%B3/%E3%83%AA%E3%83%8F%E3%82%99%E3%83%BC%E3%82%B9%E3%83%95%E3%82%9A%E3%83%A9%E3%83%B3.jpg" alt="リバースプラン" id="reverseBtn">
+            <img src="https://hontani-hajime.github.io/logo.JPG" alt="ロゴ" id="logo">
         </aside>
         <section>
             <!-- メインコンテンツ -->
@@ -97,17 +97,17 @@
     <script>
         // カレンダーのボタンをクリックした時に表示するURL
         document.getElementById('calendarBtn').addEventListener('click', function() {
-            document.getElementById('contentFrame').src = "https://hontani-hajime.github.io/server/%E3%82%AB%E3%83%AC%E3%83%B3%E3%83%80%E3%83%BC/";
+            document.getElementById('contentFrame').src = "https://hontani-hajime.github.io/%E3%82%AB%E3%83%AC%E3%83%B3%E3%83%80%E3%83%BC/";
         });
 
         // リバースプランのボタンをクリックした時に表示するURL
         document.getElementById('reverseBtn').addEventListener('click', function() {
-            document.getElementById('contentFrame').src = "https://hontani-hajime.github.io/server/%E3%83%AA%E3%83%90%E3%83%BC%E3%82%B9%E3%83%97%E3%83%A9%E3%83%B3/";
+            document.getElementById('contentFrame').src = "https://hontani-hajime.github.io/%E3%83%AA%E3%83%90%E3%83%BC%E3%82%B9%E3%83%97%E3%83%A9%E3%83%B3/";
         });
 
         // カレンダーのボタンをクリックした時に表示するURL
         document.getElementById('gradeBtn').addEventListener('click', function() {
-            document.getElementById('contentFrame').src = "https://hontani-hajime.github.io/server/%E3%82%B0%E3%83%AC%E3%83%BC%E3%83%89%E3%82%A2%E3%83%83%E3%83%97";
+            document.getElementById('contentFrame').src = "https://hontani-hajime.github.io/%E3%82%B0%E3%83%AC%E3%83%BC%E3%83%89%E3%82%A2%E3%83%83%E3%83%97";
         });
     </script>
 </body>
