--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>本谷元共通サーバー</title>
+  <title>元共通サーバー</title>
 
   <!-- ファビコン -->
   <link rel="icon" href="/file/hajime.jpg" type="image/jpeg" />
@@ -12,11 +12,55 @@
   <link rel="apple-touch-icon" href="/file/hajime.jpg" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="default" />
-  <meta name="apple-mobile-web-app-title" content="共通サーバー" />
+  <meta name="apple-mobile-web-app-title" content="元共通サーバー" />
 
   <!-- Web App Manifest -->
   <link rel="manifest" href="manifest.json" />
+
+  <!-- スタイル -->
+  <style>
+    body {
+      margin: 0;
+      font-family: sans-serif;
+      background-color: #f9f9f9;
+    }
+
+    header {
+      background-color: white;
+      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    }
+
+    .top-border {
+      height: 8px;
+      background-color: navy;
+    }
+
+    .header-content {
+      display: flex;
+      align-items: center;
+      padding: 12px 16px;
+    }
+
+    .header-content img {
+      width: 48px;
+      height: 48px;
+      margin-right: 12px;
+    }
+  </style>
 </head>
 <body>
+
+  <header>
+    <div class="top-border"></div>
+    <div class="header-content">
+      <img src="/file/hajime.jpg" alt="ロゴ" />
+      <img src="/file/hajime.jpg" alt="ロゴ2" />
+    </div>
+  </header>
+
+  <!-- コンテンツ部分（今は空） -->
+  <main>
+  </main>
+
 </body>
 </html>
