--- a/index.html
+++ b/index.html
@@ -41,10 +41,15 @@
       padding: 12px 16px;
     }
 
-    .header-content img {
+    .header-content img:first-child {
       width: 48px;
       height: 48px;
       margin-right: 12px;
+    }
+
+    .header-content img:last-child {
+      width: 96px;
+      height: 48px;
     }
 
     main {
@@ -72,7 +77,7 @@
     .menu {
       background-color: white;
       padding: 8px 0;
-      margin: 0 auto;
+      margin: 12px auto 16px auto; /* ← 背景と重ならないよう調整済！ */
       width: 90%;
       border-radius: 8px;
     }
