--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     }
 
     .header-content img:last-child {
-      width: 96px;
+      width: 144px;
       height: 48px;
     }
 
@@ -67,7 +67,7 @@
     }
 
     .sidebar-header {
-      background-color: #dbe887;
+      background-color: #e9e2b2; /* ← 薄茶色に変更！ */
       padding: 12px;
       font-weight: bold;
       color: black;
@@ -77,8 +77,8 @@
     .menu {
       background-color: white;
       padding: 8px 0;
-      margin: 12px auto 16px auto; /* ← 背景と重ならないよう調整済！ */
-      width: 90%;
+      margin: 14px auto 20px auto; /* ← 被らないようにゆとり多めに */
+      width: 88%;
       border-radius: 8px;
     }
 
@@ -116,6 +116,7 @@
     <div class="sidebar">
       <div class="sidebar-header">基本メニュー</div>
       <div class="menu">
+        <div class="menu-item">トップ</div>
         <div class="menu-item">カレンダー</div>
         <div class="menu-item">生活記録表</div>
         <div class="menu-item">貸し借りの記録</div>
@@ -126,7 +127,7 @@
       </div>
     </div>
     <div class="content">
-      <!-- コンテンツ表示部分（今は空） -->
+      <!-- コンテンツ表示部分 -->
     </div>
   </main>
 
