--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
     .top-border {
       height: 8px;
-      background-color: navy;
+      background-color: #e9e2b2; /* ← ここを変更！ */
     }
 
     .header-content {
@@ -67,7 +67,7 @@
     }
 
     .sidebar-header {
-      background-color: #e9e2b2; /* ← 薄茶色に変更！ */
+      background-color: #e9e2b2;
       padding: 12px;
       font-weight: bold;
       color: black;
@@ -77,7 +77,7 @@
     .menu {
       background-color: white;
       padding: 8px 0;
-      margin: 14px auto 20px auto; /* ← 被らないようにゆとり多めに */
+      margin: 14px auto 20px auto;
       width: 88%;
       border-radius: 8px;
     }
@@ -133,3 +133,4 @@
 
 </body>
 </html>
+
