--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
     .top-border {
       height: 8px;
-      background-color: #e9e2b2; /* ← ここを変更！ */
+      background-color: #c4b169; /* ← 濃いめの茶色に変更！ */
     }
 
     .header-content {
@@ -133,4 +133,3 @@
 
 </body>
 </html>
-
