--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
     .top-border {
       height: 8px;
-      background-color: #c4b169; /* ← 濃いめの茶色に変更！ */
+      background-color: #c4b169;
     }
 
     .header-content {
@@ -59,11 +59,17 @@
 
     .sidebar {
       width: 220px;
+      flex-shrink: 0;
+      margin-right: 24px;
+      display: flex;
+      flex-direction: column;
+      gap: 20px;
+    }
+
+    .sidebar-box {
       background-color: #fffacd;
       border-radius: 12px;
       overflow: hidden;
-      margin-right: 24px;
-      flex-shrink: 0;
     }
 
     .sidebar-header {
@@ -114,18 +120,33 @@
 
   <main>
     <div class="sidebar">
-      <div class="sidebar-header">基本メニュー</div>
-      <div class="menu">
-        <div class="menu-item">トップ</div>
-        <div class="menu-item">カレンダー</div>
-        <div class="menu-item">生活記録表</div>
-        <div class="menu-item">貸し借りの記録</div>
-        <div class="menu-item">データベース</div>
-        <div class="menu-item">成績管理</div>
-        <div class="menu-item">パスワード一覧</div>
-        <div class="menu-item">マニュアル</div>
+
+      <!-- 基本メニュー -->
+      <div class="sidebar-box">
+        <div class="sidebar-header">基本メニュー</div>
+        <div class="menu">
+          <div class="menu-item">トップ</div>
+          <div class="menu-item">カレンダー</div>
+          <div class="menu-item">生活記録表</div>
+          <div class="menu-item">貸し借りの記録</div>
+          <div class="menu-item">データベース</div>
+          <div class="menu-item">成績管理</div>
+          <div class="menu-item">パスワード一覧</div>
+        </div>
       </div>
+
+      <!-- 便利機能集 -->
+      <div class="sidebar-box">
+        <div class="sidebar-header">便利機能集</div>
+        <div class="menu">
+          <div class="menu-item">アプリ一覧</div>
+          <div class="menu-item">メモ帳</div>
+          <div class="menu-item">マニュアル</div>
+        </div>
+      </div>
+
     </div>
+
     <div class="content">
       <!-- コンテンツ表示部分 -->
     </div>
