--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
     <!-- コンテンツエリア -->
     <div class="content-area">
-      <div class="content-header">コンテンツエリア</div>
+      <div class="content-header" id="content-title">トップ</div>
       <div class="content-inner">
         <p>ここに表示したい内容を書いていきます。</p>
       </div>
