--- a/index.html
+++ b/index.html
@@ -5,7 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>元共通サーバー</title>
 
-  <!-- CSS -->
+  <!-- ファビコン -->
+  <link rel="icon" href="/file/hajime.jpg" type="image/jpeg" />
+  <link rel="apple-touch-icon" href="/file/hajime.jpg" />
+  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <meta name="apple-mobile-web-app-status-bar-style" content="default" />
+  <meta name="apple-mobile-web-app-title" content="元共通サーバー" />
+
+  <!-- スタイル -->
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
