--- a/index.html
+++ b/index.html
@@ -4,15 +4,11 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>元共通サーバー</title>
-
-  <!-- ファビコン -->
   <link rel="icon" href="/file/hajime.jpg" type="image/jpeg" />
   <link rel="apple-touch-icon" href="/file/hajime.jpg" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="default" />
   <meta name="apple-mobile-web-app-title" content="元共通サーバー" />
-
-  <!-- CSS読み込み -->
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
@@ -27,18 +23,19 @@
 
   <main>
     <div class="sidebar">
-
-      <!-- 基本メニュー -->
       <div class="sidebar-box">
         <div class="sidebar-header">基本メニュー</div>
         <div class="menu">
           <div class="menu-item">トップ</div>
           <div class="menu-item">カレンダー</div>
           <div class="menu-item">生活記録表</div>
+          <div class="menu-item">貸し借りの記録</div>
+          <div class="menu-item">データベース</div>
+          <div class="menu-item">成績管理</div>
+          <div class="menu-item">パスワード一覧</div>
         </div>
       </div>
 
-      <!-- 便利機能集（今回は動かさない） -->
       <div class="sidebar-box">
         <div class="sidebar-header">便利機能集</div>
         <div class="menu">
@@ -47,10 +44,8 @@
           <div class="menu-item">マニュアル</div>
         </div>
       </div>
-
     </div>
 
-    <!-- コンテンツエリア -->
     <div class="content-area">
       <div class="content-header" id="content-title">トップ</div>
       <div class="content-inner">
@@ -59,7 +54,6 @@
     </div>
   </main>
 
-  <!-- JS読み込み -->
   <script src="script.js"></script>
 </body>
 </html>
