--- a/companionship/index.html
+++ b/companionship/index.html
@@ -1,1 +1,11 @@
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+  <meta charset="UTF-8">
+  <title>トップページ</title>
+</head>
+<body>
+  <h1>トップ</h1>
+</body>
+</html>
 
