--- a/manual/index.html
+++ b/manual/index.html
@@ -1,1 +1,10 @@
-
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+  <meta charset="UTF-8">
+  <title>トップページ</title>
+</head>
+<body>
+  <h1>トおにぎり</h1>
+</body>
+</html>
