--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>元共通サーバー</title>
-  <link rel="icon" href="/file/hajime.jpg" type="image/jpeg" />
-  <link rel="apple-touch-icon" href="/file/hajime.jpg" />
+  <link rel="icon" href="/file/icon.jpeg" type="image/jpeg" />
+  <link rel="apple-touch-icon" href="/file/icon.jpeg" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="default" />
   <meta name="apple-mobile-web-app-title" content="元共通サーバー" />
