--- a/top/index.html
+++ b/top/index.html
@@ -2,9 +2,31 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
-  <title>トップページ</title>
+  <title>トップ</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+      background-color: #f5f5f5;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+    h1 {
+      margin: 20px;
+      color: #333;
+    }
+    iframe {
+      border: none;
+      width: 90%;
+      height: 600px;
+      max-width: 1200px;
+    }
+  </style>
 </head>
 <body>
-  <h1>トッお米プ</h1>
+  <h1>トップ</h1>
+  <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQfzufpNI0SYDqHTjk3J4zJVyuYpTZai81fVpRfs5I4wlk3qFMAOjhBKLRf-18jS-FYk6DSheQ0tjud/pubhtml?gid=311661140&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
 </body>
 </html>
